# bgpip-tools

./: .gitignore  README.md  asns.json  pyproject.toml  requirements.txt  setup.py
.github/: release-ip-lists.sh
.github/workflows/: release.yml
bgpip_tools/: __main__.py  config.py  data.py  project.json  utils.py
cidrs/v4/: cn.txt  cn.unicom.txt  global.txt  jp.txt  tw.txt
cidrs/v6/: cn.txt  global.txt  jp.txt  tw.txt
config/: cmcc.yml  unicom.yml
config/nightly/: cstnet.yml  global.yml  googlecn.yml  netflix.yml  route.jp.yml  stream.netflix.yml  tw.yml  us.yml
config/stable/: cn.cernet.yml  cn.drpeng.yml  cn.mobile.yml  cn.telecom.yml  cn.yml
src/bgpip_tools/: __main__.py  asn.py  bgp.py  bogon.py  config.py  data.py  utils.py
src/bgpip_tools/resources/: bogon.json
